--- a/src/index.html
+++ b/src/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Document</title>
+    <title>Welcome To Planet Oxy</title>
 
     <!--styles-->
     <link rel="stylesheet" href="./css/styles.css" />
@@ -14,7 +14,7 @@
   </head>
 
   <body>
-    <section class="dh-container">
+    <section class="container">
       <nav class="dh-flex navbar">
         <a href="#"><img src="./assets/vectors/GLOBE.svg" alt="" /></a>
 
@@ -26,12 +26,12 @@
       </nav>
     </section>
 
-    <div class="dh-container">
+    <div class="container">
       <!-- ANTIHERO -->
-      <section class="dh-content dh-flex">
+      <section class="dh-flex">
         <div id="terminal_window" class="terminal">
           <div class="terminal--window-nav dh-flex">
-            <div class="terminal--title dh-center-h dh-flex gap-1-half">
+            <div class="terminal--title center-h dh-flex gap-1-half">
               <svg
                 class="terminal--icon"
                 viewBox="0 0 14 9"
@@ -117,7 +117,7 @@
               </svg>
 
               <!-- <img class="terminal--icon"  src="./assets/vectors/terminal_icon.svg" alt=""> -->
-              <p class="green dh-center-h terminal-window-title">Terminal</p>
+              <p class="green center-h terminal-window-title">Terminal</p>
             </div>
             <div class="terminal--nav-controls dh-flex gap-1-half">
               <button class="terminal--min">
@@ -199,7 +199,7 @@
               For assistance, please type <strong>Help</strong>
             </p>
             <div class="terminal--cli dh-flex gap-1-half">
-              <p class="terminal--text dh-center-h">
+              <p class="terminal--text center-h">
                 guest@<strong class="terminal--text"
                   ><a href="https://www.digitalhippie.xyz" target="_blank"
                     >digitalhippie.xyz</a
@@ -217,7 +217,7 @@
       </section>
 
       <!-- tagline shnadis -->
-      <section class="dh-content dh-flex dh-mb-2">
+      <section class="content dh-flex dh-mb-2">
         <div class="title dh-flex">
           <div class="title--intro"><p>Hi, I'm</p></div>
           <div class="title--name"><h1>ASHLEY</h1></div>
@@ -241,7 +241,7 @@
       </section>
 
       <!-- about me -->
-      <section class="dh-content dh-flex dh-flex-left">
+      <section class="content dh-flex dh-flex-left">
         <div class="about-me">
           <h2 class="about-me--headline dh-mb-1-hlf">
             A <strong class="orange">Bit</strong> About Me
@@ -256,12 +256,12 @@
 
         <div class="skills w-100 dh-mb-1">
           <h3 class="orange dh-mb-1-hlf">Technologies I’ve worked with</h3>
-          <ul class="list">
+          <ul class="list flow-hide">
             <!-- tech -->
             <li>Typescript</li>
             <li>ASP.NET 7</li>
             <li>Angular</li>
-            <li>Arduino/ESP32</li>
+            <li>Arduinos</li>
 
             <!-- design -->
             <li>Corel Draw</li>
@@ -272,6 +272,14 @@
         </div>
 
         <button class="btn solid btn-font-2">REQUEST CV</button>
+
+        <div class="headshot_frame dh-flex content-center dh-my-1">
+          <img
+            class="headshot"
+            src="./assets/bitmap/IMG_20200408_170956paint.jpg"
+            alt=""
+          />
+        </div>
       </section>
     </div>
   </body>
