added socials sidebar

--- a/public/index.html
+++ b/public/index.html
@@ -28,6 +28,34 @@
       </nav>
     </section>
 
+    
+    <div class="sidebar--container">
+      <div class="sidebar">
+        <ul>
+          <li>
+            <a href="https://github.com/DigitalHippieStudios"
+              ><img src="./assets/vectors/github.svg" alt=""
+            /></a>
+          </li>
+          <li>
+            <a href="https://www.linkedin.com/in/bamodise/"
+              ><img src="./assets/vectors/linkedin.svg" alt=""
+            /></a>
+          </li>
+          <li>
+            <a href="https://twitter.com/DigitalHippie_"
+              ><img src="./assets/vectors/twitter.svg" alt=""
+            /></a>
+          </li>
+          <li>
+            <a href="https://twitter.com/DigitalHippie_"
+              ><img src="./assets/vectors/twitter.svg" alt=""
+            /></a>
+          </li>
+        </ul>
+      </div>
+    </div>
+
     <div class="container content--container">
       <!-- ANTIHERO -->
       <section class="dh-flex antihero">
@@ -296,7 +324,6 @@
               fill="none"
               xmlns="http://www.w3.org/2000/svg"
             >
-            
               <path
                 d="M0.844727 1.40002H173.876V243.621H0.844727V1.40002Z"
                 stroke="#E77236"
