--- a/src/index.html
+++ b/src/index.html
@@ -28,6 +28,34 @@
       </nav>
     </section>
 
+    
+    <div class="sidebar--container">
+      <div class="sidebar">
+        <ul>
+          <li>
+            <a href="https://github.com/DigitalHippieStudios"
+              ><img src="./assets/vectors/github.svg" alt=""
+            /></a>
+          </li>
+          <li>
+            <a href="https://www.linkedin.com/in/bamodise/"
+              ><img src="./assets/vectors/linkedin.svg" alt=""
+            /></a>
+          </li>
+          <li>
+            <a href="https://twitter.com/DigitalHippie_"
+              ><img src="./assets/vectors/twitter.svg" alt=""
+            /></a>
+          </li>
+          <li>
+            <a href="https://twitter.com/DigitalHippie_"
+              ><img src="./assets/vectors/twitter.svg" alt=""
+            /></a>
+          </li>
+        </ul>
+      </div>
+    </div>
+
     <div class="container content--container">
       <!-- ANTIHERO -->
       <section class="dh-flex antihero">
