--- a/src/index.html
+++ b/src/index.html
@@ -28,9 +28,7 @@
       </nav>
     </section>
 
-    
     <div class="sidebar--container">
-      
       <div class="sidebar">
         <ul>
           <li>
@@ -338,7 +336,7 @@
 
     <footer class="container dh-flex-row dh-flex-even align-x">
       <!-- <p>something</p> -->
-      <div class="container socials dh-flex-row dh-justify align-x">
+      <div class="socials dh-flex-row dh-justify align-x">
         <a href="digitalhippie.xyz"
           ><img style="width: 2em" src="./assets/vectors/dh_logo.svg" alt=""
         /></a>
