update: head-shoot frame and layout

--- a/src/index.html
+++ b/src/index.html
@@ -243,7 +243,7 @@
           </div>
         </div>
 
-        <!-- tagline shnadis -->
+        <!-- tagline shanadis -->
         <div class="content dh-flex dh-mb-2 title--container">
           <div class="title dh-flex">
             <div class="title--intro"><p>Hi, I'm</p></div>
@@ -304,32 +304,34 @@
           <button class="btn solid btn-font-2">REQUEST CV</button>
         </div>
         <div class="headshot--container content-center dh-my-1 pad-y-1">
-          <img
-            class="headshot"
-            src="./assets/bitmap/IMG_20200408_170956paint.jpg"
-            alt=""
-          />
-          <!-- <img
-            class="headshot headshot-frame"
-            src="./assets/vectors/headshot_frame.svg"
-            alt=""
-          /> -->
-          <span class="headshot headshot-frame">
-            <svg
-              class="pictureFrame"
-              width="175"
-              height="215"
-              viewBox="0 0 175 245"
-              fill="none"
-              xmlns="http://www.w3.org/2000/svg"
-            >
-              <path
-                d="M0.844727 1.40002H173.876V243.621H0.844727V1.40002Z"
-                stroke="#E77236"
-                stroke-width="4"
-              />
-            </svg>
-          </span>
+          <div>
+            <img
+              class="headshot"
+              src="./assets/bitmap/IMG_20200408_170956paint.jpg"
+              alt=""
+            />
+            <!-- <img
+        class="headshot headshot-frame"
+        src="./assets/vectors/headshot_frame.svg"
+        alt=""
+      /> -->
+            <span class="headshot headshot-frame">
+              <svg
+                class="pictureFrame"
+                width="175"
+                height="215"
+                viewBox="0 0 175 245"
+                fill="none"
+                xmlns="http://www.w3.org/2000/svg"
+              >
+                <path
+                  d="M0.844727 1.40002H173.876V243.621H0.844727V1.40002Z"
+                  stroke="#E77236"
+                  stroke-width="4"
+                />
+              </svg>
+            </span>
+          </div>
         </div>
       </section>
     </div>
