tings bro... more tings... arbitrary tings...

--- a/src/index.html
+++ b/src/index.html
@@ -301,7 +301,7 @@
             </ul>
           </div>
 
-          <button class="btn solid btn-font-2">REQUEST CV</button>
+          <button class="btn solid btn-font-1-hv">REQUEST CV</button>
         </div>
         <div class="headshot--container content-center dh-my-1 pad-y-1">
           <div>
