--- a/src/index.html
+++ b/src/index.html
@@ -254,7 +254,7 @@
             </div>
           </div>
 
-          <div class="w-100 tagline-container container">
+          <div class="w-100 pt-0 pl-0 tagline-container container">
             <div class="tagline">
               <p>
                 <strong>I Make</strong>
