--- a/src/index.html
+++ b/src/index.html
@@ -262,8 +262,10 @@
               </p>
             </div>
             <div class="w-100 dh-flex dh-flex-even cta-group">
-              <button class="btn solid"><a href="">PROJECTS</a></button>
-              <button class="btn outline">HIT ME UP!</button>
+              <button class="btn-primary-outline orange">
+                <a href="">PROJECTS</a>
+              </button>
+              <button class="btn-primary-outline">HIT ME UP!</button>
             </div>
           </div>
         </div>
@@ -301,7 +303,7 @@
             </ul>
           </div>
 
-          <button class="btn solid btn-font-1-hv">REQUEST CV</button>
+          <button class="btn-orange">REQUEST CV</button>
         </div>
         <div class="headshot--container content-center dh-my-1 pad-y-1">
           <div>
