--- a/src/index.html
+++ b/src/index.html
@@ -14,21 +14,21 @@
   </head>
 
   <body>
-    <section class="container nav--container">
-      <nav class="dh-flex navbar">
-        <a href="#" class="dh-flex"
+    <section class="container navbar__container">
+      <nav class="d-flex navbar">
+        <a href="#" class="d-flex"
           ><img src="./assets/vectors/GLOBE.svg" alt=""
         /></a>
 
-        <ul class="dh-flex dh-list nav--options">
-          <li class="nav--item"><a href="#">blog</a></li>
-          <li class="nav--item"><a href="#">projects</a></li>
-          <li class="nav--item"><a href="#">contact</a></li>
+        <ul class="d-flex flex-row navbar__options">
+          <li class="navbar__item"><a href="#">blog</a></li>
+          <li class="navbar__item"><a href="#">projects</a></li>
+          <li class="navbar__item"><a href="#">contact</a></li>
         </ul>
       </nav>
     </section>
 
-    <div class="sidebar--container">
+    <div class="sidebar__container">
       <div class="sidebar">
         <ul>
           <li>
@@ -57,12 +57,12 @@
 
     <div class="container content--container">
       <!-- ANTIHERO -->
-      <section class="dh-flex antihero">
+      <section class="d-flex antihero mb-2">
         <div id="terminal_window" class="terminal">
-          <div class="terminal--window-nav dh-flex">
-            <div class="terminal--title center-h dh-flex gap-1-half">
+          <div class="terminal__window__navbar d-flex">
+            <div class="terminal__title center-h d-flex gap-1-half">
               <svg
-                class="terminal--icon"
+                class="terminal__icon"
                 viewBox="0 0 14 9"
                 fill="none"
                 xmlns="http://www.w3.org/2000/svg"
@@ -144,14 +144,13 @@
                   fill="#72DB31"
                 />
               </svg>
-
-              <!-- <img class="terminal--icon"  src="./assets/vectors/terminal_icon.svg" alt=""> -->
+              <!-- <img class="terminal__icon"  src="./assets/vectors/terminal_icon.svg" alt=""> -->
               <p class="green center-h terminal-window-title">Terminal</p>
             </div>
-            <div class="terminal--nav-controls dh-flex gap-1-half">
-              <button class="terminal--min">
+            <div class="terminal__navbar__controls d-flex gap-1">
+              <button class="terminal__min">
                 <svg
-                  class="terminal--control-icon dh-mt-auto"
+                  class="terminal__control-icon mt-auto"
                   viewBox="0 0 16 2"
                   fill="none"
                   xmlns="http://www.w3.org/2000/svg"
@@ -167,9 +166,9 @@
                   />
                 </svg>
               </button>
-              <button class="terminal--expand">
+              <button class="terminal__expand">
                 <svg
-                  class="terminal--control-icon"
+                  class="terminal__control-icon"
                   viewBox="0 0 16 17"
                   fill="none"
                   xmlns="http://www.w3.org/2000/svg"
@@ -192,9 +191,9 @@
                   />
                 </svg>
               </button>
-              <button class="terminal--close">
+              <button class="terminal__close">
                 <svg
-                  class="terminal--control-icon"
+                  class="terminal__control-icon"
                   viewBox="0 0 15 17"
                   fill="none"
                   xmlns="http://www.w3.org/2000/svg"
@@ -209,26 +208,25 @@
               </button>
             </div>
           </div>
-
-          <div id="terminal_screen" class="terminal--screen pad-x-1-half">
-            <h6 class="dh-mt-none terminal-art">
-              <pre class="green terminal--art">
+          <div id="terminal_screen" class="terminal__screen p-x-1">
+            <h6 class="mt-none terminal-art">
+              <pre class="green terminal__art">
      ____  _       _ __        __   __  ___                 
     / __ \(_)___ _(_) /_____ _/ /  / / / (_)___  ____  (_)__ 
    / / / / / __ `/ / __/ __ `/ /  / /_/ / / __ \/ __ \/ / _ \
   / /_/ / / /_/ / / /_/ /_/ / /  / __  / / /_/ / /_/ / /  __/
  /_____/_/\__, /_/\__/\__,_/_/  /_/ /_/_/ .___/ .___/_/\___/ 
-         /____/                        /_/   /_/     © <span id="terminal-date">2023</span>
+         /____/                        /_/   /_/     © <span id="terminal-date" class="green">2023</span>
             </pre>
             </h6>
 
-            <p class="terminal--text">Welcome...</p>
-            <p class="terminal--text">
-              For assistance, please type <strong>Help</strong>
+            <p class="terminal__text">Welcome...</p>
+            <p class="terminal__text">
+              For assistance, please type <strong class="green">Help</strong>
             </p>
-            <div class="terminal--cli dh-flex gap-1-half">
-              <p class="terminal--text center-h">
-                guest@<strong class="terminal--text"
+            <div class="terminal__cli d-flex gap-1-half">
+              <p class="terminal__text center-h">
+                guest@<strong class="terminal__text"
                   ><a href="https://www.digitalhippie.xyz" target="_blank"
                     >digitalhippie.xyz</a
                   ></strong
@@ -236,7 +234,7 @@
               </p>
               <span
                 id="terminal_input"
-                class="cli terminal--text"
+                class="cli terminal__text"
                 type="text"
               ></span>
             </div>
@@ -244,25 +242,25 @@
         </div>
 
         <!-- tagline shanadis -->
-        <div class="content dh-flex dh-mb-2 title--container">
-          <div class="title dh-flex">
-            <div class="title--intro"><p>Hi, I'm</p></div>
-            <div class="title--name"><h1>ASHLEY</h1></div>
+        <div class="content d-flex mb-2 title__container">
+          <div class="title d-flex">
+            <div class="title__intro nowrap"><p>Hi, I'm</p></div>
+            <div class="title__name"><h1>ASHLEY</h1></div>
 
-            <div class="title--smiley">
+            <div class="title__smiley">
               <img src="./assets/vectors/smiley.svg" alt="" />
             </div>
           </div>
 
-          <div class="w-100 pt-0 pl-0 tagline-container container">
-            <div class="tagline">
+          <div class="w-100 tagline-container container">
+            <div class="tagline mb-2">
               <p>
                 <strong>I Make</strong>
                 cool websites, take pretty pictures and film epic videos
               </p>
             </div>
-            <div class="w-100 dh-flex dh-flex-even cta-group">
-              <button class="btn-primary-outline orange">
+            <div class="w-max d-flex flex-row gap-1 justify-even">
+              <button class="btn-primary">
                 <a href="">PROJECTS</a>
               </button>
               <button class="btn-primary-outline">HIT ME UP!</button>
@@ -272,10 +270,10 @@
       </section>
 
       <!-- about me -->
-      <section class="content dh-flex dh-flex-left">
-        <div class="about-me--container">
+      <section class="d-flex">
+        <div class="about-me__container">
           <div class="about-me">
-            <h2 class="about-me--headline dh-mb-1-hlf">
+            <h2 class="about-me__headline mb-half">
               A <strong class="orange">Bit</strong> About Me
             </h2>
             <p class="paragraph">
@@ -286,8 +284,8 @@
             </p>
           </div>
 
-          <div class="skills w-100 dh-mb-1">
-            <h3 class="orange dh-mb-1-hlf">Technologies I’ve worked with</h3>
+          <div class="skills w-100 mb-1">
+            <h3 class="orange mb-half">Technologies I’ve worked with</h3>
             <ul class="list flow-hide">
               <!-- tech -->
               <li>Typescript</li>
@@ -303,7 +301,7 @@
             </ul>
           </div>
 
-          <button class="btn-orange">REQUEST CV</button>
+          <button class="btn-primary-lrg">REQUEST CV</button>
         </div>
         <div class="headshot--container content-center dh-my-1 pad-y-1">
           <div>
@@ -317,6 +315,7 @@
         src="./assets/vectors/headshot_frame.svg"
         alt=""
       /> -->
+
             <span class="headshot headshot-frame">
               <svg
                 class="pictureFrame"
@@ -338,9 +337,9 @@
       </section>
     </div>
 
-    <footer class="container dh-flex-row dh-flex-even align-x">
+    <footer class="container d-flex flex-row justify-even align-center">
       <!-- <p>something</p> -->
-      <div class="socials dh-flex-row dh-justify align-x">
+      <div class="socials d-flex-row dh-justify align-x">
         <a href="digitalhippie.xyz"
           ><img style="width: 2em" src="./assets/vectors/dh_logo.svg" alt=""
         /></a>
