terminal window responsive enough.. for now...

--- a/src/index.html
+++ b/src/index.html
@@ -55,7 +55,7 @@
       <!-- ANTIHERO -->
       <section
         id="antihero"
-        class="d-flex flex-row justify-between align-center m-0 mb-2 flex-col-tablet"
+        class="d-flex flex-col flex-row-hd justify-between align-center gap-2 m-0 mb-2"
       >
         <div id="terminal_window" class="terminal">
           <div class="terminal__window__navbar d-flex">
@@ -237,8 +237,10 @@
           </div>
         </div>
 
-        <div class="d-flex flex-col align-end px-1 w-22 w-18-md w-16-sm">
-          <div class="d-flex flex-col pt-1 w-max">
+        <div
+          class="d-flex flex-col align-end align-center-md align-end-hd align-start-tablet px-1 w-16 w-max-md w-32-hd gap-6-hd"
+        >
+          <div class="d-flex flex-col pt-1 w-max w-18-md flex-row-hd">
             <p class="nowrap">Hi, I'm</p>
             <div class="d-flex flex-row justify-right">
               <h1 class="font-2 font-xxl">ASHLEY</h1>
@@ -249,14 +251,18 @@
             </div>
           </div>
 
-          <div class="w-max tagline-container px-1">
-            <p class="text-right mb-2 text-justify">
+          <div class="w-max px-1 d-flex-tablet flex-col-hd">
+            <p
+              class="mb-2 text-justify font-lg-tablet font-md-hd text-right-tablet"
+            >
               <strong>I Make</strong>
               cool websites, take pretty pictures and film epic videos
             </p>
 
-            <div class="w-max d-flex flex-row gap-1 justify-even align-end">
-              <button class="btn-primary-sm">
+            <div
+              class="w-max d-flex flex-row flex-col-tablet gap-1 justify-even align-end"
+            >
+              <button class="btn-primary-sm btn-primary-lg-tablet">
                 <a href="">PROJECTS</a>
               </button>
               <button class="btn-primary-outline-sm">HIT ME UP!</button>
@@ -266,7 +272,7 @@
       </section>
 
       <!-- about me -->
-      <section class="d-flex flex-col pt-1">
+      <section class="d-flex flex-col pt-1 flex-row-tablet">
         <div class="about-me__container">
           <div class="about-me">
             <h2 class="about-me__headline mb-half">
