touching up terminal

--- a/src/index.html
+++ b/src/index.html
@@ -219,11 +219,11 @@
           <div id="terminal_screen" class="terminal__screen">
             <h6 class="mt-none terminal-art">
               <pre class="green terminal__art">
-    ____  _       _ __        __   __  ___                 
-   / __ \(_)___ _(_) /_____ _/ /  / / / (_)___  ____  (_)__ 
-  / / / / / __ `/ / __/ __ `/ /  / /_/ / / __ \/ __ \/ / _ \
- / /_/ / / /_/ / / /_/ /_/ / /  / __  / / /_/ / /_/ / /  __/
-/_____/_/\__, /_/\__/\__,_/_/  /_/ /_/_/ .___/ .___/_/\___/ 
+     ____  _       _ __        __   __  ___                 
+    / __ \(_)___ _(_) /_____ _/ /  / / / (_)___  ____  (_)__ 
+   / / / / / __ `/ / __/ __ `/ /  / /_/ / / __ \/ __ \/ / _ \
+  / /_/ / / /_/ / / /_/ /_/ / /  / __  / / /_/ / /_/ / /  __/
+ /_____/_/\__, /_/\__/\__,_/_/  /_/ /_/_/ .___/ .___/_/\___/ 
                /____/                        /_/   /_/     © <span id="terminal-date" class="green">2023</span>
                   </pre>
             </h6>
@@ -295,7 +295,7 @@
           >
             A <strong class="orange font-chintzy font-xxl">Bit</strong> About Me
           </h2>
-          <p class="paragraph w-max w-sixth-hd">
+          <p class="paragraph w-max w-sixth-hd mb-2">
             I am a self-taught Web Developer, Graphic Designer and Videographer
             from South Africa. I also enjoy playing around with Machine Learning
             and Blockchain technologies. I made this website using vanilla
@@ -303,7 +303,7 @@
           </p>
 
           <div class="skills w-max mb-1">
-            <h3 class="orange mb-half">Technologies I’ve worked with</h3>
+            <h3 class="orange">Technologies I’ve worked with</h3>
             <ul class="list flow-hide">
               <li>Typescript</li>
               <li>ASP.NET 7</li>
